# wanted-task

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yaml  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt
app/: main.py
app/api/: router.py
app/api/endpoints/: company.py  search.py  tag.py
app/core/: config.py  dependency.py  language.py  utils.py
app/db/: base.py  session.py  transaction.py
app/models/: __init__.py  company.py  tag.py
app/repositories/: company.py  company_tag.py  tag.py
app/schemas/: base.py  company.py  search.py  tag.py
app/services/: company.py  tag.py
dummy/: insert_dummy_data.py
migrations/: env.py  script.py.mako
migrations/versions/: 4571299ee188_.py  659c59631060_.py  af3d88b87c7e_.py  bf1f83bcc53e_.py
tests/: conftest.py  test.py  test_factories.py  test_mvp.py
tests/factories/: __init__.py  base.py  company.py  tag.py
